--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="pt-br">
 
 <head>
+    <title>Teste</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<div class="conainer">
-    <header></header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
-</div>
-
+<body>
+    <div class="container">
+        <header></header>
+        <main></main>
+        <aside></aside>
+        <footer></footer>
+    </div>
+</body>
 </html>
